Added a bunch of test infra: * Seperated docker-compose setups per test type * Made all docker tests able to run at the same time, even with app running * Cleaned up env and added SKIP_CF to skip the cookie middleware as it requires a private key * Updated client packages

--- a/.eslintrc
+++ b/.eslintrc
@@ -28,7 +28,8 @@
     }, {
       "files": "cypress/**/*",
       "rules": {
-        "jest/valid-expect": "off"
+        "jest/valid-expect": "off",
+        "jest/expect-expect": "off"
       } 
     }
   ]
