--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -68,9 +68,20 @@ http {
     server {
         listen 443;
         server_name photos.local.carpedalan.com;
+        location /healthcheck {
+            access_log off;
+            log_not_found off;
+            expires max;
+            add_header Pragma public;
+            add_header Cache-Control "public";
+            add_header Vary "Accept-Encoding";
+            return 200 "healthy";
+        }        
+
         location / {       
-            proxy_pass http://cdn;
+            proxy_pass http://cdn/local-bucket/;
         }
+
         ssl_certificate /etc/ssl/certs/local.carpedalan.com.pem;
         ssl_certificate_key /etc/ssl/private/local.carpedalan.com-key.pem;
         # ssl_dhparam /etc/ssl/certs/dhparam.pem;
@@ -134,31 +145,78 @@ http {
 
 
     }
+    server {
+        listen 80;
+        server_name local.carpedalan.com;
+        client_max_body_size 500M;
+        fastcgi_read_timeout 300;
+        location /healthcheck {
+            access_log off;
+            log_not_found off;
+            expires max;
+            add_header Pragma public;
+            add_header Cache-Control "public";
+            add_header Vary "Accept-Encoding";
+            return 200 "healthy";
+        }        
 
-    # server {
-    #     listen 80;
-    #     location /dist {
-    #         proxy_set_header Host $host;
-    #         proxy_set_header X-Real-IP $remote_addr;
-    #         proxy_set_header X-Forwarded-Proto $scheme; 
-    #         proxy_pass http://client-app;
-    #     }
-    #     location /docs/ {
-    #         proxy_set_header Host $host;
-    #         proxy_set_header X-Real-IP $remote_addr;
-    #         proxy_set_header X-Forwarded-Proto $scheme; 
-    #         proxy_pass http://client-app;
-    #     }
+        location /dist {
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-Proto $scheme; 
+            proxy_pass http://client-app;
+        }
+        location /docs/ {
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-Proto $scheme; 
+            proxy_pass http://client-app;
+        }
 
-    #     location / {
-    #         proxy_set_header Host $host;
-    #         proxy_set_header X-Real-IP $remote_addr;
-    #         proxy_set_header X-Forwarded-Proto $scheme; 
-    #         proxy_pass http://node-app;
-    #     }
-    #     fastcgi_read_timeout 300;
+        location /local-bucket/ {
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-Proto $scheme; 
+            proxy_pass http://cdn;
+        }
 
-    # }
+        location / {
+            gzip on;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-Proto $scheme; 
+            proxy_pass http://node-app;
+        }
+        location /v1/ {
+            gzip on;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-Proto $scheme; 
+            proxy_pass http://node-app;
+        }
+        location /__webpack_hmr {
+            proxy_pass http://client-app;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection “upgrade”;
+        }
+
+
+    }
+
+
+    server {
+        listen 80;
+        server_name cdn.local.carpedalan.com;
+        location /report.html {     
+            root /assets;
+        }
+        location / {     
+            add_header  Content-Encoding  gzip;  
+            root /assets;
+        }
+    }
+
 
     server {
         listen 443 http2 ssl;
@@ -166,6 +224,16 @@ http {
         server_name local.carpedalan.com;
         client_max_body_size 500M;
         fastcgi_read_timeout 300;
+        location /healthcheck {
+            access_log off;
+            log_not_found off;
+            expires max;
+            add_header Pragma public;
+            add_header Cache-Control "public";
+            add_header Vary "Accept-Encoding";
+            return 200 "healthy";
+        }        
+
         location /dist {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
