--- a/.env.ci
+++ b/.env.ci
@@ -1,18 +1,14 @@
-ADMIN_PASSWORD=testadmin
-AWS_ACCESS_KEY_ID=key
-AWS_SECRET_ACCESS_KEY=secret
-CDN_DOMAIN=photos.local.carpedalan.com
-CLOUDFRONT_KEY_ID=APKAITYT46ZP6GZ3XXUQ
-DOMAIN=local.carpedalan.com
-LOG_LEVEL=none
-NODE_ENV=ci
-PG_DATABASE=carpedalan
-PG_HOST=localhost
-PG_PASSWORD=postgres
-PG_PORT=5432
-PG_URI=postgres://postgres:postgres@e2e_pg:5432/carpedalan
-PG_USER=postgres
-PORT=3001
 PUBLIC_PASSWORD=testpublic
-S3_BUCKET=carpedev
+ADMIN_PASSWORD=testadmin
 SESSION_SECRET=farts
+PG_HOST=pg
+PG_USER=postgres
+PG_PASSWORD=postgres
+PG_DATABASE=carpedalan
+PG_PORT=5432
+PG_URI=postgres://postgres:postgres@pg:5432/carpedalan
+PORT=80
+CDN_DOMAIN=photos.local.carpedalan.com
+ASSET_CDN_DOMAIN=cdn.local.carpedalan.com
+DOMAIN=local.carpedalan.com
+SKIP_CF=true
