--- a/client/package.json
+++ b/client/package.json
@@ -6,10 +6,11 @@
     "build:prod": "TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\"}' NODE_ENV=production webpack --config webpack.config.prod.js --mode=production",
     "build": "TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\"}' webpack --config webpack.config.js --mode=development",
     "clean": "rm -rf dist",
-    "lint": "tslint --project ."
+    "lint": "tslint --project .",
+    "test": "jest"
   },
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/jest-dom": "^5.1.1",
     "date-fns": "2.9.0",
     "lodash": "^4.17.15",
     "react": "^16.12.0",
@@ -22,7 +23,7 @@
     "react-window-infinite-loader": "^1.0.5",
     "styled-components": "^5.0.0",
     "tslib": "^1.10.0",
-    "typescript": "^3.7.4",
+    "typescript": "^3.7.5",
     "webpack": "^4.41.5",
     "webpack-bundle-analyzer": "^3.6.0",
     "webpack-cli": "^3.3.10",
@@ -37,59 +38,59 @@
     "compression-webpack-plugin": "^3.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.3",
+    "@babel/core": "^7.8.4",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.8.3",
+    "@babel/preset-env": "^7.8.4",
     "@hot-loader/react-dom": "^16.11.0",
     "@testing-library/react": "^9.4.0",
     "@types/debug": "^4.1.5",
     "@types/enzyme": "^3.10.4",
     "@types/express": "^4.17.2",
     "@types/extract-text-webpack-plugin": "^3.0.4",
-    "@types/html-webpack-plugin": "^3.2.1",
-    "@types/jest": "^24.0.25",
+    "@types/html-webpack-plugin": "^3.2.2",
+    "@types/jest": "^25.1.1",
     "@types/lodash": "^4.14.149",
-    "@types/long": "^4.0.0",
+    "@types/long": "^4.0.1",
     "@types/qs": "^6.9.0",
-    "@types/react": "^16.9.17",
-    "@types/react-dom": "^16.9.4",
+    "@types/react": "^16.9.19",
+    "@types/react-dom": "^16.9.5",
     "@types/react-helmet": "^5.0.15",
     "@types/react-router": "^5.1.4",
     "@types/react-router-dom": "^5.1.3",
-    "@types/react-test-renderer": "^16.9.1",
+    "@types/react-test-renderer": "^16.9.2",
     "@types/react-virtualized-auto-sizer": "^1.0.0",
     "@types/react-window": "^1.8.1",
     "@types/styled-components": "^4.4.2",
-    "@types/superagent": "^4.1.4",
-    "@types/webpack": "^4.41.2",
+    "@types/superagent": "^4.1.5",
+    "@types/webpack": "^4.41.4",
     "@types/webpack-dev-middleware": "^2.0.3",
-    "@types/webpack-env": "^1.15.0",
+    "@types/webpack-env": "^1.15.1",
     "@types/webpack-hot-middleware": "^2.25.0",
-    "axios": "^0.19.1",
-    "babel-jest": "^24.9.0",
+    "axios": "^0.19.2",
+    "babel-jest": "^25.1.0",
     "babel-loader": "^8.0.6",
-    "babel-preset-jest": "^24.9.0",
+    "babel-preset-jest": "^25.1.0",
     "compression-webpack-plugin": "^3.1.0",
     "debug": "^4.1.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
-    "enzyme-to-json": "^3.4.3",
+    "enzyme-to-json": "^3.4.4",
     "eslint": "^6.8.0",
     "express": "^4.17.1",
-    "fork-ts-checker-webpack-plugin": "^3.1.1",
+    "fork-ts-checker-webpack-plugin": "^4.0.3",
     "happypack": "^5.0.1",
-    "jest": "^24.9.0",
+    "jest": "^25.1.0",
     "prettier": "1.19.1",
-    "react-hot-loader": "^4.12.18",
-    "ts-jest": "^24.3.0",
+    "react-hot-loader": "^4.12.19",
+    "ts-jest": "^25.2.0",
     
-    "tslint": "^5.20.1",
+    "tslint": "^6.0.0",
     "tslint-config-airbnb": "^5.11.2",
     "tslint-config-prettier": "^1.18.0",
     "tslint-plugin-prettier": "^2.1.0",
-    "tslint-react": "^4.1.0",
+    "tslint-react": "^4.2.0",
     "tslint-react-hooks": "^2.2.1",
-    "typedoc": "^0.16.2",
+    "typedoc": "^0.16.9",
     "typescript-styled-plugin": "^0.15.0"
 
   }
