--- a/docker-compose.integration.yml
+++ b/docker-compose.integration.yml
@@ -1,4 +1,4 @@
-version: '2.3'
+version: '2.4'
 
 services:
 
@@ -19,10 +19,13 @@ services:
       - ./.env.test:/app/.env
       - ./.env.test:/app/.env.test
     env_file: 
-      - .env.test
+      - .env.ci
 
   pg_test:
     extends:
       file: docker-compose.base.yml
       service: pg_test
+    env_file: 
+      - .env.ci
+
 
