--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "setup": "./scripts/setup.sh",
     "lint": "eslint db imageResizer scripts server shared  --ext .js,.jsx",
     "integration": "COMPOSE_PROJECT_NAME=cd_test docker-compose -f docker-compose.integration.yml build && COMPOSE_PROJECT_NAME=cd_test docker-compose -f docker-compose.integration.yml run api yarn integration",
+    "regression": "COMPOSE_PROJECT_NAME=regression docker-compose -f docker-compose.regression.yml build && COMPOSE_PROJECT_NAME=regression docker-compose -f docker-compose.regression.yml run --rm e2e yarn test",
+    "unit": "COMPOSE_PROJECT_NAME=cd_unit docker-compose -f docker-compose.unit.yml build && COMPOSE_PROJECT_NAME=cd_unit docker-compose -f docker-compose.unit.yml run client yarn test",
     "integration:ci": "PG_HOST=localhost NODE_ENV=ci jest -c jestrc.js --runInBand --verbose",
     "build": "BABEL_ENV=production NODE_ENV=production yarn webpack --mode production --config webpack.prod.js",
     "migrateAndSeed": "MIGRATING=true ./scripts/migrateAndSeed.sh",
@@ -23,7 +25,7 @@
     "d": "docker-compose down",
     "du": "docker-compose down && docker-compose up",
     "dub": "docker-compose down && docker-compose up --build",
-    "e2e": "PG_PORT=5433 PG_HOST=localhost CYPRESS_BASE_URL=http://local.carpedalan.com cypress open --env configFile=local",
+    "e2e": "COMPOSE_PROJECT_NAME=cd_e2e docker-compose -f docker-compose.e2e.yml build && COMPOSE_PROJECT_NAME=cd_e2e docker-compose -f docker-compose.e2e.yml run cypress yarn cypress run",
     "cypress": "PG_PORT=5555 PG_HOST=localhost CYPRESS_BASE_URL=http://local.carpedalan.com cypress run --env configFile=local",
     "e2e:ci": "MIGRATING=true NODE_ENV=ci yarn migrate NODE_ENV=ci yarn knex seed:run --knexfile db/knexfile.js && yarn start:prod",
     "test-junit": "cypress run --reporter junit --reporter-options 'mochaFile=junit-results/my-test-output.xml'",
@@ -73,7 +75,8 @@
   "dependencies": {
     "@pulumi/aws": "^1.18.0",
     "@pulumi/awsx": "^0.18.14",
-    "@pulumi/pulumi": "^1.8.1"
+    "@pulumi/pulumi": "^1.8.1",
+    "rimraf": "^3.0.1"
   },
   "optionalDependencies": {
     "cypress": "3.8.2"
