--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "d": "docker-compose down",
     "du": "docker-compose down && docker-compose up",
     "dub": "docker-compose down && docker-compose up --build",
-    "e2e": "COMPOSE_PROJECT_NAME=cd_e2e docker-compose -f docker-compose.e2e.yml build && COMPOSE_PROJECT_NAME=cd_e2e docker-compose -f docker-compose.e2e.yml run cypress yarn cypress run",
+    "e2e": "COMPOSE_PROJECT_NAME=cd_e2e docker-compose -f docker-compose.e2e.yml build && COMPOSE_PROJECT_NAME=cd_e2e docker-compose -f docker-compose.e2e.yml run --rm --service-ports cypress yarn cypress run",
     "cypress": "PG_PORT=5555 PG_HOST=localhost CYPRESS_BASE_URL=http://local.carpedalan.com cypress run --env configFile=local",
     "e2e:ci": "MIGRATING=true NODE_ENV=ci yarn migrate NODE_ENV=ci yarn knex seed:run --knexfile db/knexfile.js && yarn start:prod",
     "test-junit": "cypress run --reporter junit --reporter-options 'mochaFile=junit-results/my-test-output.xml'",
