--- a/Dockerfile.gitlab
+++ b/Dockerfile.gitlab
@@ -73,3 +73,4 @@ RUN if [ "$PULUMI_VERSION" = "latest" ]; then \
     curl -fsSL https://get.pulumi.com/ | bash -s -- --version $(echo $PULUMI_VERSION | cut -c 2-); \
   fi && \
   mv ~/.pulumi/bin/* /usr/bin
+COPY client.tar .
