--- a/docker-compose.e2e.yml
+++ b/docker-compose.e2e.yml
@@ -60,8 +60,8 @@ services:
     depends_on:
       api: 
         condition: service_healthy
-      # client: 
-      #   condition: service_healthy
+      client: 
+        condition: service_healthy
       aws: 
         condition: service_started
 
@@ -105,8 +105,8 @@ services:
     depends_on:
       pg:
         condition: service_healthy
-      # client:
-      #   condition: service_healthy
+      client:
+        condition: service_healthy
 
     environment:
       PORT: 8001
