--- a/docker-compose.e2e.yml
+++ b/docker-compose.e2e.yml
@@ -91,6 +91,7 @@ services:
   api:
     stdin_open: true
     tty: true
+    image: api:latest
     extends:
       file: docker-compose.base.yml
       service: api
