--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,6 +28,7 @@ build client:
       - client.tar
   script: 
     - docker build -t client:latest -f client/Dockerfile ./client
+    - docker save client:latest > client.tar
 build api:
   before_script:
     - echo 'Skipping login'
@@ -40,7 +41,8 @@ build api:
     paths: 
       - api.tar
   script: 
-    - docker build -t api:latest -f server/Dockerfile .
+    - docker build -t api:latest -f server/Dockerfile . --target=dev
+    - docker save api:latest > api.tar
 
 # dependencies:
 #   before_script:
@@ -92,6 +94,8 @@ test:
     # - yarn unit
     # - yarn integration
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
+    - docker load api.tar
+    - docker load client.tar
     - docker-compose -f docker-compose.e2e.yml up
 # deploy:
 #   stage: deploy
