--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,7 +38,7 @@ build client:
   script: 
     - ls -al
     - '[ -f ./client.tar ] && docker load --input client.tar'
-    - docker build -t client:latest -f client/Dockerfile --cache-from client:latest ./client
+    - docker build -t client:latest -f client/Dockerfile --cache-from client:latest --cache-from node:12-slim ./client
     - docker save client:latest > client.tar
 build api:
   before_script:
@@ -47,7 +47,7 @@ build api:
   services:
   - docker:18.06.3-dind
   cache:
-    key: client-cache
+    key: api-cache
     paths:
       - api.tar
   artifacts: 
