--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: registry.gitlab.com/carpedalan/carpedalan-web/runner:latest
+image: docker:18.06.3
 
 
 variables:
@@ -57,7 +57,7 @@ build api:
   script: 
     - ls -al
     - '[ -f ./api.tar ] && docker load --input api.tar'
-    - docker build -t api:latest -f server/Dockerfile --cache-from api:latest . --target=dev
+    - docker build -t api:latest -f server/Dockerfile --cache-from api:latest --cache-from node:12-alpine . --target=dev
     - docker save api:latest > api.tar
 
 # dependencies:
