--- a/package.json
+++ b/package.json
@@ -11,26 +11,13 @@
   "scripts": {
     "setup": "./scripts/setup.sh",
     "lint": "eslint db imageResizer scripts server shared  --ext .js,.jsx",
-    "integration": "COMPOSE_PROJECT_NAME=cd_test docker-compose -f docker-compose.integration.yml build && COMPOSE_PROJECT_NAME=cd_test docker-compose -f docker-compose.integration.yml run api yarn integration",
-    "regression": "COMPOSE_PROJECT_NAME=regression docker-compose -f docker-compose.regression.yml build && COMPOSE_PROJECT_NAME=regression docker-compose -f docker-compose.regression.yml run --rm e2e yarn test",
-    "unit": "COMPOSE_PROJECT_NAME=cd_unit docker-compose -f docker-compose.unit.yml build && COMPOSE_PROJECT_NAME=cd_unit docker-compose -f docker-compose.unit.yml run client yarn test",
-    "integration:ci": "PG_HOST=localhost NODE_ENV=ci jest -c jestrc.js --runInBand --verbose",
-    "build": "BABEL_ENV=production NODE_ENV=production yarn webpack --mode production --config webpack.prod.js",
-    "migrateAndSeed": "MIGRATING=true ./scripts/migrateAndSeed.sh",
-    "migrate": "MIGRATING=true ./scripts/migrate.sh",
-    "migrateAndStart": "MIGRATING=true yarn migrateAndSeed && DEBUG=knex*,-knex:client,-knex:connection,-knex:pool nodemon --inspect=0.0.0.0 .",
+    "integration": "COMPOSE_PROJECT_NAME=cd_test docker-compose -f docker-compose.integration.yml run api yarn integration",
+    "regression": "COMPOSE_PROJECT_NAME=regression docker-compose -f docker-compose.regression.yml run --rm e2e yarn test",
+    "unit": "COMPOSE_PROJECT_NAME=cd_unit docker-compose -f docker-compose.unit.yml run client yarn test",
+    "build": "./scripts/development/buildForTest.sh",
     "start": "yarn && docker-compose up --build -d && ./scripts/development/start.sh",
-    "start:prod": "MIGRATING=true NODE_ENV=production ./scripts/migrate.sh && NODE_ENV=production node .",
-    "u": "docker-compose up",
-    "d": "docker-compose down",
-    "du": "docker-compose down && docker-compose up",
-    "dub": "docker-compose down && docker-compose up --build",
-    "e2e": "COMPOSE_PROJECT_NAME=cd_e2e docker-compose -f docker-compose.e2e.yml build && COMPOSE_PROJECT_NAME=cd_e2e docker-compose -f docker-compose.e2e.yml run --rm --service-ports cypress yarn cypress run",
-    "cypress": "PG_PORT=5555 PG_HOST=localhost CYPRESS_BASE_URL=http://local.carpedalan.com cypress run --env configFile=local",
-    "e2e:ci": "MIGRATING=true NODE_ENV=ci yarn migrate NODE_ENV=ci yarn knex seed:run --knexfile db/knexfile.js && yarn start:prod",
-    "test-junit": "cypress run --reporter junit --reporter-options 'mochaFile=junit-results/my-test-output.xml'",
-    "test-multiple": "cypress run --reporter mocha-multi-reporters --reporter-options configFile=config.json",
-    "updateConfig": "aws s3 cp .env-prod s3://configurations-pipeline/.env --profile carpedev"
+    "e2e": "COMPOSE_PROJECT_NAME=cd_e2e docker-compose -f docker-compose.e2e.yml run --rm cypress yarn cypress run",
+    "test": "yarn build && yarn unit && yarn integration && yarn e2e && yarn regression"
   },
   "author": "",
   "license": "ISC",
