Added base layer cache

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,13 +26,16 @@ build client:
     key: client-cache
     paths:
       - client.tar
+      - node12slim.tar
   artifacts: 
     expire_in: 1 week
     paths: 
       - client.tar
   script: 
     - ls -al
-    - '[ -f ./client.tar ] && docker load --input client.tar'
+    - '[ ! -f ./node12slim.tar ] && docker pull node:12-slim && docker save node:12-slim > node12slim.tar'
+    - '[ -f ./api.tar ] && docker load --input api.tar'
+    - '[ -f ./node12slim.tar ] && docker load --input node12slim.tar'
     - docker build -t client:latest -f client/Dockerfile --cache-from client:latest --cache-from node:12-slim ./client
     - docker save client:latest > client.tar
 
@@ -47,13 +50,16 @@ build api:
     key: api-cache
     paths:
       - api.tar
+      - node12alpine.tar
   artifacts: 
     expire_in: 1 week
     paths: 
       - api.tar
   script: 
     - ls -al
+    - '[ ! -f ./node12alpine.tar ] && docker pull node:12-alpine && docker save node:12-alpine > node12alpine.tar'
     - '[ -f ./api.tar ] && docker load --input api.tar'
+    - '[ -f ./node12alpine.tar ] && docker load --input node12alpine.tar'
     - docker build -t api:latest -f server/Dockerfile --cache-from api:latest --cache-from node:12-alpine . --target=dev
     - docker save api:latest > api.tar
 
@@ -68,6 +74,7 @@ build cypress:
     key: cypress-cache
     paths:
       - cypress.tar
+      - cypressBase.tar
   artifacts: 
     expire_in: 1 week
     paths: 
@@ -75,6 +82,8 @@ build cypress:
   script: 
     - ls -al
     - '[ -f ./cypress.tar ] && docker load --input cypress.tar'
+    - '[ -f ./cypressBase.tar ] && docker load --input cypressBase.tar'
+    - '[ ! -f ./cypressBase.tar ] && docker pull cypress/base:10 && docker save cypress/base:10 > cypressBase.tar'
     - docker build -t cypress:latest -f cypress/Dockerfile --cache-from cypress:latest ./cypress
     - docker save cypress:latest > cypress.tar
 
