--- a/docker-compose.e2e.yml
+++ b/docker-compose.e2e.yml
@@ -39,7 +39,7 @@ services:
       CYPRESS_BASE_URL: https://local.carpedalan.com
     env_file: 
       - .env.ci
-    image: cypress:latest
+    image: registry.gitlab.com/carpedalan/carpedalan-web/cypress:latest
     depends_on:
       api: 
         condition: service_healthy
